--- a/index.html
+++ b/index.html
@@ -221,6 +221,7 @@
               tu nombre</option>
             <option value="Abel Alonso">Abel Alonso</option>
             <option value="Aina Orsi">Aina Orsi</option>
+            <option value="Alberto López">Alberto López</option>
             <option value="Alejandro Silva">Alejandro Silva</option>
             <option value="Alfredo González">Alfredo González</option>
             <option value="Álvaro García">Álvaro García</option>
@@ -240,7 +241,7 @@
             <option value="Claudia Moral">Claudia Moral</option>
             <option value="Consuelo Martínez">Consuelo Martínez</option>
             <option value="Cristian Ortiz">Cristian Ortiz</option>
-            <option value="Dani San Martín">Dani San Martín</option>
+            <option value="Daniel San Martín">Daniel San Martín</option>
             <option value="Diego Granero">Diego Granero</option>
             <option value="Domingo Fernández">Domingo Fernández</option>
             <option value="Eduardo Alarcón">Eduardo Alarcón</option>
@@ -248,6 +249,7 @@
             <option value="Fátima Gómez">Fátima Gómez</option>
             <option value="Faustino Villanueva">Faustino Villanueva</option>
             <option value="Fernando Rigla">Fernando Rigla</option>
+            <option value="Francisco Manuel Migueles">Francisco Manuel Migueles</option>
             <option value="Francisco Ortega">Francisco Ortega</option>
             <option value="Francisco Sánchez">Francisco Sánchez</option>
             <option value="Inmaculada Palazón">Inmaculada Palazón</option>
@@ -258,9 +260,51 @@
             <option value="Javier Serrano">Javier Serrano</option>
             <option value="Jesús Negretti">Jesús Negretti</option>
             <option value="Joaquín Lucas">Joaquín Lucas</option>
+            <option value="Jordi Faura">Jordi Faura</option>
+            <option value="Jordi Molina">Jordi Molina</option>
+            <option value="José Alberto Cabrera">José Alberto Cabrera</option>
+            <option value="José Baldovi">José Baldovi</option>
+            <option value="José Carlos Rodríguez">José Carlos Rodríguez</option>
+            <option value="José Luis Millán">José Luis Millán</option>
+            <option value="José Luis Romera">José Luis Romera</option>
+            <option value="José Ros">José Ros</option>
+            <option value="Juan Cano Mora">Juan Cano Mora</option>
+            <option value="Juan Carlos Moreno">Juan Carlos Moreno</option>
+            <option value="Juan Manuel Lluch">Juan Manuel Lluch</option>
+            <option value="Juan Miguel Cabello">Juan Miguel Cabello</option>
+            <option value="Julen Yanguas">Julen Yanguas</option>
+            <option value="Kenya Rincón">Kenya Rincón</option>
+            <option value="Laura Martínez">Laura Martínez</option>
+            <option value="Lissette Zúñiga Quiñonez">Lissette Zúñiga Quiñonez</option>
+            <option value="Lydia Sanz">Lydia Sanz</option>
+            <option value="María Ángeles Tirado">María Ángeles Tirado</option>
+            <option value="María Castilla">María Castilla</option>
+            <option value="María Matas">María Matas</option>
+            <option value="Marina Ligero Sierras">Marina Ligero Sierras</option>
+            <option value="Mario López">Mario López</option>
+            <option value="Marta Requena">Marta Requena</option>
+            <option value="Micaela Santacatalina">Micaela Santacatalina</option>
+            <option value="Miguel Fabra">Miguel Fabra</option>
             <option value="Miriam Hernández">Miriam Hernández</option>
+            <option value="Muna Driss">Muna Driss</option>
+            <option value="Oscar Tirado">Oscar Tirado</option>
             <option value="Pablo Alonso">Pablo Alonso</option>
             <option value="Pablo Gross">Pablo Gross</option>
+            <option value="Paola Castillo">Paola Castillo</option>
+            <option value="Patricia Pérez">Patricia Pérez</option>
+            <option value="Proyecto Muñoz">Proyecto Muñoz</option>
+            <option value="Rafael Rey">Rafael Rey</option>
+            <option value="Rafael Román">Rafael Román</option>
+            <option value="Rafaella Monteiro">Rafaella Monteiro</option>
+            <option value="Raquel García García">Raquel García García</option>
+            <option value="Rocío Borrego">Rocío Borrego</option>
+            <option value="Rubén Torres">Rubén Torres</option>
+            <option value="Sergio Esparza">Sergio Esparza</option>
+            <option value="Sergio Simón">Sergio Simón</option>
+            <option value="Sergio Soriano">Sergio Soriano</option>
+            <option value="Susana Jiménez">Susana Jiménez</option>
+            <option value="Toni Ramírez">Toni Ramírez</option>
+            <option value="Verónica Argente">Verónica Argente</option>
             <option value="Raúl Castejón">Raúl Castejón</option>
             <option value="Zaira Burgos">Zaira Burgos</option>
           </select>
@@ -350,6 +394,24 @@
                     
             // Listado de usuarios
             switch (name) {
+               case 'Abel Alonso':
+                    positionValue = 'Responsable Mantenimiento';
+                    oficina = 'Sede Navarrés';
+                    telefono = '696938224';
+                    correo = 'abel.alonso@dulmatesa.es';
+                    break;
+               case 'Aina Orsi':
+                    positionValue = 'Responsable PRL & MA';
+                    oficina = 'Sede Navarrés';
+                    telefono = '659855737';
+                    correo = 'aina.orsi@dulmatesa.es';
+                    break;
+               case 'Alberto López':
+                    positionValue = 'Presidente';
+                    oficina = 'Oficinas Centrales / HQ';
+                    telefono = '653784293';
+                    correo = 'dulmatesa@dulmatesa.es';
+                    break;
                 case 'Alejandro Silva':
                     positionValue = 'Responsable de Departamento IT';
                     oficina = 'Oficinas Centrales / HQ';
@@ -362,56 +424,176 @@
                     telefono = '606950021';
                     correo = 'alfredo.gonzalez@dulmatesa.es';
                     break;
+                case 'Álvaro García':
+                    positionValue = 'Técnico Calidad Central';
+                    oficina = 'Oficinas Centrales / HQ';
+                    telefono = '682485597';
+                    correo = 'alvaro.garcia@dulmatesa.es';
+                    break;
+                case 'Ana Cáceres':
+                    positionValue = 'Encargada Producción';
+                    oficina = 'Sede Navarrés';
+                    telefono = '628301417';
+                    correo = 'ana.caceres@dulmatesa.es';
+                    break;
                 case 'Ana Gutiérrez':
-                    positionValue = 'Jefa de Calidad';
+                    positionValue = 'Responsable Calidad';
                     oficina = 'Sede Puente Genil';
-                    telefono = '652914552';
+                    telefono = '620751997';
                     correo = 'ana.gutierrez@dulmatesa.es';
                     break;
+                case 'Ana María García':
+                    positionValue = 'Técnica RRHH & PRL';
+                    oficina = 'Sede Puente Genil';
+                    telefono = '618863669';
+                    correo = 'anamaria.garcia@dulmatesa.es';
+                    break;
                 case 'Ana Moral':
-                    positionValue = 'Administrativa Contable';
+                    positionValue = 'Administrativa Contabilidad';
                     oficina = 'Oficinas Centrales / HQ';
                     telefono = '952105709';
                     correo = 'ana.moral@dulmatesa.es';
                     break;
+                case 'Ana Murcia':
+                    positionValue = 'Directora Compras y Packaging';
+                    oficina = 'Oficinas Centrales / HQ';
+                    telefono = '682827987';
+                    correo = 'ana.murcia@dulmatesa.es';
+                    break;
+                case 'Arantxa Argente':
+                    positionValue = 'Técnica Calidad';
+                    oficina = 'Sede Navarrés';
+                    telefono = '630828399';
+                    correo = 'arantxa.argente@dulmatesa.es';
+                    break;
                 case 'Antonio Rodríguez':
-                    positionValue = 'Administrativo Logística';
+                    positionValue = 'Auxiliar Administrativo Comercial y Logística';
                     oficina = 'Oficinas Centrales / HQ';
                     telefono = '674377672';
                     correo = 'antonio.rodriguez@dulmatesa.es';
                     break;
+                case 'Beatriz Caballero':
+                    positionValue = 'Administrativa Cadena de Suministro';
+                    oficina = 'Sede Navarrés';
+                    telefono = '630561991';
+                    correo = 'beatriz.caballero@dulmatesa.es';
+                    break;
                 case 'Begoña Quero':
-                    positionValue = 'Técnico de RR.HH. y PRL';
+                    positionValue = 'Técnica RR.HH. & PRL';
                     oficina = 'Sede Puente Genil';
                     telefono = '696487314';
                     correo = 'bego.quero@dulmatesa.es';
                     break;
-                case 'Diego Granero':
-                    positionValue = 'Cadena de suministro';
+                case 'Carlos Lluch':
+                    positionValue = 'Encargado Producción';
                     oficina = 'Sede Navarrés';
-                    telefono = '962266191 / 630561991';
+                    telefono = '699875362';
+                    correo = 'carlos.lluch@dulmatesa.es';
+                    break;
+                case 'Carlos López':
+                    positionValue = 'Director General Calidad y Seguridad Alimentaria';
+                    oficina = 'Oficinas Centrales / HQ';
+                    telefono = '639611176';
+                    correo = 'carlos.lopez@dulmatesa.es';
+                    break;
+                case 'Carlos Sarrión':
+                    positionValue = 'Encargado Producción';
+                    oficina = 'Sede Navarrés';
+                    telefono = '635642344';
+                    correo = 'carlos.sarrion@dulmatesa.es';
+                    break;
+                case 'Carmen Sanchís':
+                    positionValue = 'Responsable Compras y Packaging';
+                    oficina = 'Sede Navarrés';
+                    telefono = '659845655';
+                    correo = 'carmen.sanchis@dulmatesa.es';
+                    break;
+                case 'Claudia Moral':
+                    positionValue = 'Key Account Manager';
+                    oficina = 'Oficinas Centrales / HQ';
+                    telefono = '686627533';
+                    correo = 'claudia.moral@dulmatesa.es';
+                    break;
+                case 'Consuelo Martínez':
+                    positionValue = 'Encargada Producción';
+                    oficina = 'Sede Navarrés';
+                    telefono = '635642344';
+                    correo = 'consuelo.martinez@dulmatesa.es';
+                    break;
+                case 'Cristian Ortiz':
+                    positionValue = 'Administrativo Facturación';
+                    oficina = 'Oficinas Centrales / HQ';
+                    telefono = '699695169';
+                    correo = 'cristian.ortiz@dulmatesa.es';
+                    break;
+                case 'Daniel San Martín':
+                    positionValue = 'Técnico Calidad';
+                    oficina = 'Sede Navarrés';
+                    telefono = '690923823';
+                    correo = 'dani.sanmartin@dulmatesa.es';
+                    break;
+                case 'Diego Granero':
+                    positionValue = 'Técnico Calidad';
+                    oficina = 'Sede Navarrés';
+                    telefono = '690923823';
                     correo = 'diego.granero@dulmatesa.es';
                     break;
-                case 'Edimar González':               
-                    positionValue = 'Administrativa Logística';
-                    oficina = 'Oficinas Centrales / HQ';
-                    correo = 'edimar.gonzalez@dulmatesa.es';
-                    telefono = '952105709';
+                case 'Domingo Fernández':
+                    positionValue = 'Responsable Cadena de Suministro';
+                    oficina = 'Sede Puente Genil';
+                    telefono = '683394997';
+                    correo = 'domingo.fernandez@dulmatesa.es';
+                    break;
+                case 'Eduardo Alarcón':               
+                    positionValue = 'Técnico Mantenimiento';
+                    oficina = 'Sede Navarrés';
+                    correo = 'eduardo.alarcon@dulmatesa.es';
+                    telefono = '689807132';
                     break;
                 case 'Esteban Tirado':               
-                    positionValue = 'Jefe Logística';
+                    positionValue = 'Jefe Cadena de Suministro Central';
                     oficina = 'Sede Navarrés';
                     correo = 'esteban.tirado@dulmatesa.es';
                     telefono = '658877528';
                     break;
+                case 'Fátima Gómez':               
+                    positionValue = 'Encargada Producción';
+                    oficina = 'Sede Puente Genil';
+                    correo = 'fatima.gomez@dulmatesa.es';
+                    telefono = '618863669';
+                    break;
+                case 'Faustino Villanueva':               
+                    positionValue = 'Administrativo Mantenimiento';
+                    oficina = 'Navarrés';
+                    correo = 'faustino.villanueva@dulmatesa.es';
+                    telefono = '630829208';
+                    break;
+                case 'Fernando Rigla':               
+                    positionValue = 'Responsable Cadena de Suministro';
+                    oficina = 'Navarrés';
+                    correo = 'fernando.rigla@dulmatesa.es';
+                    telefono = '635642349';
+                    break;
                 case 'Francisco Ortega':               
-                    positionValue = 'Contabilidad';
+                    positionValue = 'Auxiliar Administrativo Tesorería';
                     oficina = 'Oficinas Centrales / HQ';
                     correo = 'francisco.ortega@dulmatesa.es';
                     telefono = '952105709';
                     break;
+                case 'Francisco Sánchez':               
+                    positionValue = 'Responsable Mantenimiento';
+                    oficina = 'Sede Puente Genil';
+                    correo = 'francisco.sanchez@dulmatesa.es';
+                    telefono = '620337760';
+                    break;
+                case 'Inmaculada Palazón':               
+                    positionValue = 'Administrativa Cadena de Suministro';
+                    oficina = 'Sede Navarrés';
+                    correo = 'inmaculada.palazon@dulmatesa.es';
+                    telefono = '962266191';
+                    break;
                 case 'Isabel Valle':               
-                    positionValue = 'Técnica de Aprovisionamiento';
+                    positionValue = 'Aprovisionadora Compras y Packaging';
                     oficina = 'Sede Puente Genil';
                     correo = 'isabel.valle@dulmatesa.es';
                     telefono = '650349402';
@@ -440,6 +622,12 @@
                     correo = 'joaquin.lucas@dulmatesa.es';
                     telefono = '952105709';
                     break;
+                case 'Micaela Santacatalina':               
+                    positionValue = 'Técnica RRHH';
+                    oficina = 'Sede Navarrés';
+                    correo = 'micaela.santacatalina@dulmatesa.es';
+                    telefono = '699748590';
+                    break;
                 case 'Miriam Hernández':               
                     positionValue = 'Tecnóloga';
                     oficina = 'Sede Puente Genil';
@@ -453,7 +641,7 @@
                     correo = 'pablo.alonso@dulmatesa.es';
                     break;
                 case 'Pablo Gross':
-                    positionValue = 'Auxiliar Administrativo Comercial y Logística';
+                    positionValue = 'Administrativo Pedidos';
                     oficina = 'Oficinas Centrales / HQ';
                     telefono = '674377672';
                     correo = 'pablo.gross@dulmatesa.es';
