--- a/index.html
+++ b/index.html
@@ -295,8 +295,8 @@
             <option value="Proyecto Muñoz">Proyecto Muñoz</option>
             <option value="Rafael Rey">Rafael Rey</option>
             <option value="Rafael Román">Rafael Román</option>
-            <option value="Rafaella Monteiro">Rafaella Monteiro</option>
             <option value="Raquel García García">Raquel García García</option>
+            <option value="Raúl Castejón">Raúl Castejón</option>
             <option value="Rocío Borrego">Rocío Borrego</option>
             <option value="Rubén Torres">Rubén Torres</option>
             <option value="Sergio Esparza">Sergio Esparza</option>
@@ -305,7 +305,6 @@
             <option value="Susana Jiménez">Susana Jiménez</option>
             <option value="Toni Ramírez">Toni Ramírez</option>
             <option value="Verónica Argente">Verónica Argente</option>
-            <option value="Raúl Castejón">Raúl Castejón</option>
             <option value="Zaira Burgos">Zaira Burgos</option>
           </select>
           <label for="position" style="display: none;">Cargo:</label> <input id="position"
@@ -564,15 +563,21 @@
                     break;
                 case 'Faustino Villanueva':               
                     positionValue = 'Administrativo Mantenimiento';
-                    oficina = 'Navarrés';
+                    oficina = 'Sede Navarrés';
                     correo = 'faustino.villanueva@dulmatesa.es';
                     telefono = '630829208';
                     break;
                 case 'Fernando Rigla':               
                     positionValue = 'Responsable Cadena de Suministro';
-                    oficina = 'Navarrés';
+                    oficina = 'Sede Navarrés';
                     correo = 'fernando.rigla@dulmatesa.es';
                     telefono = '635642349';
+                    break;
+                case 'Francisco Manuel Migueles':               
+                    positionValue = 'Técnico Calidad';
+                    oficina = 'Sede Puente Genil';
+                    correo = 'francisco.migueles@dulmatesa.es';
+                    telefono = '957601536';
                     break;
                 case 'Francisco Ortega':               
                     positionValue = 'Auxiliar Administrativo Tesorería';
@@ -598,6 +603,12 @@
                     correo = 'isabel.valle@dulmatesa.es';
                     telefono = '650349402';
                     break;
+                case 'Iván Camacho':               
+                    positionValue = 'Encargado Producción';
+                    oficina = 'Sede Puente Genil';
+                    correo = 'ivan.camacho@dulmatesa.es';
+                    telefono = '962266191';
+                    break;
                 case 'Javier Jaime':               
                     positionValue = 'Controller';
                     oficina = 'Oficinas Centrales / HQ';
@@ -616,11 +627,155 @@
                     correo = 'javier.serrano@dulmatesa.es';
                     telefono = '620751997';
                     break;
+                case 'Jesús Negretti':               
+                    positionValue = 'Administrativo Mantenimiento';
+                    oficina = 'Sede Puente Genil';
+                    correo = 'jesus.negretti@dulmatesa.es';
+                    telefono = '659457781';
+                    break;
                 case 'Joaquín Lucas':               
-                    positionValue = 'Administrativo Contable';
+                    positionValue = 'Administrativo Contabilidad';
                     oficina = 'Oficinas Centrales / HQ';
                     correo = 'joaquin.lucas@dulmatesa.es';
                     telefono = '952105709';
+                    break;
+                case 'Jordi Faura':               
+                    positionValue = 'Encargado Mantenimiento';
+                    oficina = 'Sede Navarrés';
+                    correo = 'jordi.faura@dulmatesa.es';
+                    telefono = '659016467';
+                    break;
+                case 'Jordi Molina':               
+                    positionValue = 'Técnico Calidad';
+                    oficina = 'Sede Navarrés';
+                    correo = 'jordi.molina@dulmatesa.es';
+                    telefono = '630828399';
+                    break;
+                case 'José Baldoví':               
+                    positionValue = 'Jefe de Planta';
+                    oficina = 'Sede Navarrés';
+                    correo = 'jose.baldovi@dulmatesa.es';
+                    telefono = '690910468';
+                    break;
+                case 'José Carlos Rodríguez':               
+                    positionValue = 'Responsable Tesorería';
+                    oficina = 'Oficinas Centrales / HQ';
+                    correo = 'josecarlos.rodriguez@dulmatesa.es';
+                    telefono = '679302109';
+                    break;
+                case 'José Carlos Rodríguez':               
+                    positionValue = 'Responsable Tesorería';
+                    oficina = 'Oficinas Centrales / HQ';
+                    correo = 'josecarlos.rodriguez@dulmatesa.es';
+                    telefono = '679302109';
+                    break;
+                case 'José Luis Millán':               
+                    positionValue = 'Encargado Producción';
+                    oficina = 'Sede Navarrés';
+                    correo = 'joseluis.millan@dulmatesa.es';
+                    telefono = '635642344';
+                    break;
+                case 'José Luis Romera':               
+                    positionValue = 'Técnico Calidad';
+                    oficina = 'Sede Navarrés';
+                    correo = 'joseluis.romerra@dulmatesa.es';
+                    telefono = '630828399';
+                    break;
+                case 'José Ros':               
+                    positionValue = 'Aprovisionador Compras y Packaging';
+                    oficina = 'Sede Navarrés';
+                    correo = 'jose.ros@dulmatesa.es';
+                    telefono = '635642355';
+                    break;
+                case 'Juan Cano':               
+                    positionValue = 'Administrativo Cadena Suministro Central';
+                    oficina = 'Oficinas Centrales / HQ';
+                    correo = 'juan.cano@dulmatesa.es';
+                    telefono = '628851965';
+                    break;
+                case 'Juan Carlos Moreno':               
+                    positionValue = 'Director General Negocio';
+                    oficina = 'Oficinas Centrales / HQ';
+                    correo = 'juancarlos.moreno@dulmatesa.es';
+                    telefono = '678285038';
+                    break;
+                case 'Juan Manuel Lluch':               
+                    positionValue = 'Encargado Producción';
+                    oficina = 'Sede Navarrés';
+                    correo = 'juanmanuel.lluch@dulmatesa.es';
+                    telefono = '962266191';
+                    break;
+                case 'Juan Miguel Cabello':               
+                    positionValue = 'Encargado Producción';
+                    oficina = 'Sede Navarrés';
+                    correo = 'juanmiguel.cabello@dulmatesa.es';
+                    telefono = '618863669';
+                    break;
+                case 'Julen Yanguas':               
+                    positionValue = 'Jefe de Planta';
+                    oficina = 'Sede Puente Genil';
+                    correo = 'julen.yanguas@dulmatesa.es';
+                    telefono = '628368102';
+                    break;
+                case 'Kenya Rincón':               
+                    positionValue = 'Administrativa Comercial y Logística';
+                    oficina = 'Oficinas Centrales / HQ';
+                    correo = 'kenya.rincon@dulmatesa.es';
+                    telefono = '638651907';
+                    break;
+                case 'Laura Martínez':               
+                    positionValue = 'Responsable RRHH';
+                    oficina = 'Sede Puente Genil';
+                    correo = 'laura.martinez@dulmatesa.es';
+                    telefono = '683180977';
+                    break;
+                case 'Lissette Zúñiga':               
+                    positionValue = 'Técnica Calidad';
+                    oficina = 'Sede Navarrés';
+                    correo = 'lissette.zuniga@dulmatesa.es';
+                    telefono = '962266191';
+                    break;
+                case 'Lydia Sanz':               
+                    positionValue = 'Responsable Contabilidad';
+                    oficina = 'Oficinas Centrales / HQ';
+                    correo = 'lydia.sanz@dulmatesa.es';
+                    telefono = '699302573';
+                    break;
+                case 'María Ángeles Tirado':               
+                    positionValue = 'Técnica Calidad';
+                    oficina = 'Sede Navarrés';
+                    correo = 'mariaangeles.tirado@dulmatesa.es';
+                    telefono = '630828399';
+                    break;
+                case 'María Castilla':               
+                    positionValue = 'Técnica Calidad';
+                    oficina = 'Sede Puente Genil';
+                    correo = 'maria.castilla@dulmatesa.es';
+                    telefono = '957601536';
+                    break;
+                case 'María Matas':               
+                    positionValue = 'Técnica Calidad';
+                    oficina = 'Sede Puente Genil';
+                    correo = 'maria.matas@dulmatesa.es';
+                    telefono = '957601536';
+                    break;
+                case 'Marina Ligero':               
+                    positionValue = 'Técnica Calidad Central';
+                    oficina = 'Oficinas Centrales / HQ';
+                    correo = 'marina.ligero@dulmatesa.es';
+                    telefono = '609084797';
+                    break;
+                case 'Mario López':               
+                    positionValue = 'Jefe de Obra';
+                    oficina = 'Sede Puente Genil';
+                    correo = 'mario.lopez@dulmatesa.es';
+                    telefono = '683120239';
+                    break;
+                case 'Marta Requena':               
+                    positionValue = 'Responsable Calidad';
+                    oficina = 'Sede Navarrés';
+                    correo = 'marta.requena@dulmatesa.es';
+                    telefono = '648916611';
                     break;
                 case 'Micaela Santacatalina':               
                     positionValue = 'Técnica RRHH';
@@ -628,23 +783,77 @@
                     correo = 'micaela.santacatalina@dulmatesa.es';
                     telefono = '699748590';
                     break;
+                case 'Miguel Fabra':               
+                    positionValue = 'Encargado Mantenimiento';
+                    oficina = 'Sede Navarrés';
+                    correo = 'miguel.fabra@dulmatesa.es';
+                    telefono = '630574118';
+                    break;
                 case 'Miriam Hernández':               
-                    positionValue = 'Tecnóloga';
+                    positionValue = 'Tecnóloga Calidad';
                     oficina = 'Sede Puente Genil';
                     correo = 'miriam.hernandez@dulmatesa.es';
                     telefono = '638402663';
                     break;
+                case 'Muna Driss':               
+                    positionValue = 'Responsable Administración';
+                    oficina = 'Oficinas Centrales / HQ';
+                    correo = 'muna.driss@dulmatesa.es';
+                    telefono = '622326988';
+                    break;
+                case 'Óscar Tirado':               
+                    positionValue = 'Encargado Producción';
+                    oficina = 'Sede Navarrés';
+                    correo = 'oscar.tirado@dulmatesa.es';
+                    telefono = '635642344';
+                    break;
                 case 'Pablo Alonso':
-                    positionValue = 'Director RR.HH.';
+                    positionValue = 'Director RRHH & PRL';
                     oficina = 'Oficinas Centrales / HQ';
                     telefono = '660970356';
                     correo = 'pablo.alonso@dulmatesa.es';
                     break;
                 case 'Pablo Gross':
-                    positionValue = 'Administrativo Pedidos';
+                    positionValue = 'Auxiliar Administrativo Comercial y Logística';
                     oficina = 'Oficinas Centrales / HQ';
-                    telefono = '674377672';
+                    telefono = '952105709';
                     correo = 'pablo.gross@dulmatesa.es';
+                    break;
+                case 'Paola Castillo':
+                    positionValue = 'Administrativa Contabilidad';
+                    oficina = 'Oficinas Centrales / HQ';
+                    telefono = '952105709';
+                    correo = 'paola.castillo@dulmatesa.es';
+                    break;
+                case 'Patricia Pérez':
+                    positionValue = 'Encargada Producción';
+                    oficina = 'Sede Navarrés';
+                    telefono = '635642344';
+                    correo = 'patricia.perez@dulmatesa.es';
+                    break;
+                case 'Proyecto Muñoz':
+                    positionValue = 'Técnico RRHH';
+                    oficina = 'Sede Navarrés';
+                    telefono = '699258454';
+                    correo = 'proyecto.munoz@dulmatesa.es';
+                    break;
+                case 'Rafael Rey':
+                    positionValue = 'Técnico Mantenimiento';
+                    oficina = 'Sede Navarrés';
+                    telefono = '608633205';
+                    correo = 'rafael.rey@dulmatesa.es';
+                    break;
+                case 'Rafael Román':
+                    positionValue = 'Director Operaciones';
+                    oficina = 'Oficinas Centrales / HQ';
+                    telefono = '660970356';
+                    correo = 'rafael.roman@dulmatesa.es';
+                    break;
+                case 'Raquel García':
+                    positionValue = 'Técnica Calidad';
+                    oficina = 'Sede Navarrés';
+                    telefono = '630828399';
+                    correo = 'raquel.garciadulmatesa.es';
                     break;
                 case 'Raúl Castejón':               
                     positionValue = 'Controller';
@@ -652,11 +861,59 @@
                     correo = 'raul.castejon@dulmatesa.es';
                     telefono = '699089050';
                     break;
-                 case 'Zaira Burgos':               
+                case 'Rocío Borrego':               
+                    positionValue = 'Técnica Gestión Documental Calidad';
+                    oficina = 'Sede Puente Genil';
+                    correo = 'rocio.borrego@dulmatesa.es';
+                    telefono = '957601536';
+                    break;
+                case 'Rubén Torres':               
+                    positionValue = 'Encargado Producción';
+                    oficina = 'Sede Puente Genil';
+                    correo = 'ruben.torres@dulmatesa.es';
+                    telefono = '619863669';
+                    break;
+                case 'Sergio Esparza':               
+                    positionValue = 'Administrativo Recepción';
+                    oficina = 'Sede Navarrés';
+                    correo = 'sergio.esparza@dulmatesa.es';
+                    telefono = '962266191';
+                    break;
+                case 'Sergio Simón':               
+                    positionValue = 'Técnico Gestión Documental Calidad';
+                    oficina = 'Sede Navarrés';
+                    correo = 'sergio.simon@dulmatesa.es';
+                    telefono = '608789918';
+                    break;
+                case 'Sergio Soriano':               
+                    positionValue = 'Técnico Cadena de Suministro';
+                    oficina = 'Sede Navarrés';
+                    correo = 'sergio.soriano@dulmatesa.es';
+                    telefono = '962266191';
+                    break;
+                case 'Susana Jiménez':               
+                    positionValue = 'Administrativa Cadena de Suministro';
+                    oficina = 'Sede Puente Genil';
+                    correo = 'susana.jimenez@dulmatesa.es';
+                    telefono = '620193449';
+                    break;
+                case 'Toni Ramírez':               
+                    positionValue = 'Tecnólogo Calidad';
+                    oficina = 'Sede Navarrés';
+                    correo = 'toni.ramirez@dulmatesa.es';
+                    telefono = '606307755';
+                    break;
+                case 'Verónica Argente':               
+                    positionValue = 'Administrativa Recepción';
+                    oficina = 'Sede Navarrés';
+                    correo = 'veronica.argente@dulmatesa.es';
+                    telefono = '606307755';
+                    break;
+                case 'Zaira Burgos':               
                     positionValue = 'Administrativa Facturación';
                     oficina = 'Oficinas Centrales / HQ';
                     correo = 'zaira.burgos@dulmatesa.es';
-                    telefono = '952105709 - Ext. 2002';
+                    telefono = '952105709';
                     break;
                 default:
                 positionValue = 'Cargo';
