--- a/index.html
+++ b/index.html
@@ -639,6 +639,12 @@
                     correo = 'joaquin.lucas@dulmatesa.es';
                     telefono = '952105709';
                     break;
+                case 'José Alberto Cabrera':               
+                    positionValue = 'Encargado Producción';
+                    oficina = 'Sede Puente Genil';
+                    correo = 'josealberto.cabrera@dulmatesa.es';
+                    telefono = '957601536';
+                    break;
                 case 'Jordi Faura':               
                     positionValue = 'Encargado Mantenimiento';
                     oficina = 'Sede Navarrés';
