--- a/index.html
+++ b/index.html
@@ -657,7 +657,7 @@
                     correo = 'jordi.molina@dulmatesa.es';
                     telefono = '630828399';
                     break;
-                case 'José Baldoví':               
+                case 'José Baldovi':               
                     positionValue = 'Jefe de Planta';
                     oficina = 'Sede Navarrés';
                     correo = 'jose.baldovi@dulmatesa.es';
