--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
             <option value="José Luis Millán">José Luis Millán</option>
             <option value="José Luis Romera">José Luis Romera</option>
             <option value="José Ros">José Ros</option>
-            <option value="Juan Cano Mora">Juan Cano Mora</option>
+            <option value="Juan Cano">Juan Cano</option>
             <option value="Juan Carlos Moreno">Juan Carlos Moreno</option>
             <option value="Juan Manuel Lluch">Juan Manuel Lluch</option>
             <option value="Juan Miguel Cabello">Juan Miguel Cabello</option>
