--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
             <option value="Julen Yanguas">Julen Yanguas</option>
             <option value="Kenya Rincón">Kenya Rincón</option>
             <option value="Laura Martínez">Laura Martínez</option>
-            <option value="Lissette Zúñiga Quiñonez">Lissette Zúñiga Quiñonez</option>
+            <option value="Lissette Zúñiga">Lissette Zúñiga</option>
             <option value="Lydia Sanz">Lydia Sanz</option>
             <option value="María Ángeles Tirado">María Ángeles Tirado</option>
             <option value="María Castilla">María Castilla</option>
