--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
             <option value="María Ángeles Tirado">María Ángeles Tirado</option>
             <option value="María Castilla">María Castilla</option>
             <option value="María Matas">María Matas</option>
-            <option value="Marina Ligero Sierras">Marina Ligero Sierras</option>
+            <option value="Marina Ligero">Marina Ligero</option>
             <option value="Mario López">Mario López</option>
             <option value="Marta Requena">Marta Requena</option>
             <option value="Micaela Santacatalina">Micaela Santacatalina</option>
