--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
             <option value="Miguel Fabra">Miguel Fabra</option>
             <option value="Miriam Hernández">Miriam Hernández</option>
             <option value="Muna Driss">Muna Driss</option>
-            <option value="Oscar Tirado">Oscar Tirado</option>
+            <option value="Óscar Tirado">Óscar Tirado</option>
             <option value="Pablo Alonso">Pablo Alonso</option>
             <option value="Pablo Gross">Pablo Gross</option>
             <option value="Paola Castillo">Paola Castillo</option>
