--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
             <option value="Proyecto Muñoz">Proyecto Muñoz</option>
             <option value="Rafael Rey">Rafael Rey</option>
             <option value="Rafael Román">Rafael Román</option>
-            <option value="Raquel García García">Raquel García García</option>
+            <option value="Raquel García">Raquel García</option>
             <option value="Raúl Castejón">Raúl Castejón</option>
             <option value="Rocío Borrego">Rocío Borrego</option>
             <option value="Rubén Torres">Rubén Torres</option>
