--- a/index.html
+++ b/index.html
@@ -859,7 +859,7 @@
                     positionValue = 'Técnica Calidad';
                     oficina = 'Sede Navarrés';
                     telefono = '630828399';
-                    correo = 'raquel.garciadulmatesa.es';
+                    correo = 'raquel.garcia@dulmatesa.es';
                     break;
                 case 'Raúl Castejón':               
                     positionValue = 'Controller';
